--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "mailgun-cmd": "^0.1.7",
+    "md5": "^2.2.1",
     "mustache": "^2.3.0",
+    "superagent": "^3.5.0",
     "tsv": "^0.2.0"
   }
 }
