--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.4.0",
     "csv": "^1.1.1",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "mustache": "^2.3.0",
+    "prompt": "^1.0.0",
+    "prompt-sync": "^4.1.5",
     "superagent": "^3.5.0",
     "tsv": "^0.2.0"
   }
